packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/accept/distinct.ttrp
container c(in t, out result) target erp_pg """sql
SELECT DISTINCT region FROM t
"""
