packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-004.ttrp
// expect: TTRP-SQL-004
container c target erp_pg """sql
SELECT `id` FROM t
"""
